# pandas-utils

./: .dockerignore  .readthedocs.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  tox.ini
.github/workflows/: build.yaml  build_deploy.yml  build_test.yaml  build_test.yml  cd.yaml  ci.yml  deploy.yaml  tox_build.yml  upload_deploy.yaml
.trunk/: trunk.yaml
.trunk/configs/: .bandit
docker/mysql/: init.sql
docs/source/: conf.py  pd_extras.write.rst
pd_extras/write/: common.py  sql_writer.py
tests/: conftest.py
tests/write/: test_exceptions.py  test_nosql_writer.py  test_sql_writer.py
