[tool.poetry]
name = "pd-extras"
version = "5.0.0"
description = "Some utility functions on top of pandas."
authors = ["Masum Billal <billalmasum93@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/proafxin/pandas-utils"
documentation = "https://pandas-utils.readthedocs.io/en/latest/"


[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.3"
sqlalchemy = "^1.4.0"

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
